tests/paczka1/fuzzy1/12450783.err
Error in line 16: qVfn S539 99,4
Error in line 28: A86 S897 62,0
Error in line 35: A86 A86 79,2
